# ivygrep

./: .gitignore  AGENTS_DEPLOY.md  AGENTS_MONITOR.md  AGENTS_TESTING.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  index.html  style.css
.cargo/: config.toml
.github/workflows/: benchmarks.yml  ci.yml  release.yml
assets/: ig-opencode.tape  ivygrep-opencode.tape
benches/: indexer_bench.rs
dev/bench/: data.js
docs/: index.html  style.css
scripts/: benchmark_guard.py  bootstrap_stress_fixtures.sh
src/: chunking.rs  cli.rs  config.rs  daemon.rs  doctor.rs  embedding.rs  indexer.rs  ipc.rs  jobs.rs  lib.rs  main.rs  mcp.rs  merkle.rs  path_glob.rs  protocol.rs  regex_search.rs  search.rs  text.rs  tui.rs  vector_store.rs  walker.rs  workspace.rs
tests/: cli_snapshot.rs  concurrency.rs  daemon_ipc.rs  daemon_recovery_cli.rs  git_branch_switch.rs  golden_queries.rs  incremental_crud.rs  language_retrieval.rs  mcp_e2e.rs  merkle_prop.rs  skip_gitignore.rs  stress_harness.rs  watch_recovery.rs
tests/fixtures/python_repo/app/: payments.py
tests/fixtures/rust_repo/src/: lib.rs
tests/fixtures/ts_repo/src/: tax.ts
tests/snapshots/: cli_snapshot__cli_file_name_only_json.snap  cli_snapshot__cli_help.snap  cli_snapshot__cli_help.snap.new  cli_snapshot__cli_query_json.snap  golden_queries__golden_rust_tax.snap
