[package]
name = "ivygrep"
version = "0.5.23"
edition = "2024"
description = "Semantic grep that stays local"
license = "MIT"

[[bin]]
name = "ig"
path = "src/main.rs"

[features]
default = ["neural"]
neural = ["dep:fastembed", "dep:ort"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
dirs = "6.0"
fs2 = "0.4.3"
grep-matcher = "0.1"
grep-regex = "0.1"
regex = "1.5"
grep-searcher = "0.1"
globset = "0.4"
hex = "0.4"
ignore = "0.4"
notify = "8.2"
parking_lot = "0.12"
pluralizer = "0.5"
rayon = "1.10"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.26"
tokio = { version = "1.50", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
usearch = { version = "2.24", default-features = false, features = ["fp16lib"] }
uuid = { version = "1.22", features = ["v4", "serde"] }
fastembed = { version = "5", optional = true }
num_cpus = "1.16"
libc = "0.2"
tree-sitter = "0.26.7"
tree-sitter-rust = "0.24.1"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
streaming-iterator = "0.1.9"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zstd = "0.13"

[dev-dependencies]
assert_cmd = "2.2"
criterion = "0.8.2"
fs_extra = "1.3"
insta = { version = "1.46", features = ["yaml", "redactions"] }
predicates = "3.1"
proptest = "1.10"
serial_test = "3.4"
tempfile = "3.27"

[target."cfg(target_os = \"macos\")".dependencies]
ort = { version = "=2.0.0-rc.11", optional = true, default-features = false, features = ["ndarray", "std", "coreml"] }

[target."cfg(not(target_os = \"macos\"))".dependencies]
ort = { version = "=2.0.0-rc.11", optional = true, default-features = false, features = ["ndarray", "std", "cuda"] }

[profile.release]
debug = true

[[bench]]
name = "indexer_bench"
harness = false

