[package]
name = "ivygrep"
version = "0.6.5"
edition = "2024"
description = "Semantic grep that stays local — hybrid BM25 + vector search for code"
license = "MIT"
homepage = "https://bvolpato.github.io/ivygrep"
repository = "https://github.com/bvolpato/ivygrep"
readme = "README.md"
keywords = ["grep", "search", "semantic", "code-search", "mcp"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[[bin]]
name = "ig"
path = "src/main.rs"

[features]
default = ["neural"]
neural = ["dep:candle_embed", "dep:candle-core"]
accelerate = ["candle-core/accelerate"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
dirs = "6.0"
fs2 = "0.4.3"
grep-matcher = "0.1"
grep-regex = "0.1"
regex = "1.5"
grep-searcher = "0.1"
globset = "0.4"
hex = "0.4"
ignore = "0.4"
notify = "8.2"
parking_lot = "0.12"
pluralizer = "0.5"
rayon = "1.10"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.26"
tokio = { version = "1.50", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
usearch = { version = "2.24", default-features = false, features = ["fp16lib"] }
uuid = { version = "1.22", features = ["v4", "serde"] }
num_cpus = "1.16"
ratatui = "0.29.0"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-input = "0.11"
syntect = "5.2.0"
arboard = "3.4.0"
libc = "0.2"
tree-sitter = "0.26.7"
tree-sitter-rust = "0.24.1"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-php = "0.23.11"
tree-sitter-ruby = "0.23.1"
tree-sitter-swift = "0.7.1"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-scala = "0.25.0"
tree-sitter-bash = "0.25.1"
tree-sitter-haskell = "0.23.1"
tree-sitter-ocaml = "0.24.2"
tree-sitter-lua = "0.5.0"
tree-sitter-dart = "0.1.0"
tree-sitter-objc = "3.0.2"
tree-sitter-perl = "1.1.2"
streaming-iterator = "0.1.9"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zstd = "0.13"
candle_embed = { version = "0.1.4", default-features = false, optional = true }
candle-core = { version = "0.5.1", optional = true }

[dev-dependencies]
assert_cmd = "2.2"
criterion = "0.8.2"
fs_extra = "1.3"
insta = { version = "1.46", features = ["yaml", "redactions"] }
predicates = "3.1"
proptest = "1.10"
serial_test = "3.4"
tempfile = "3.27"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }


[profile.release]
debug = true

[[bench]]
name = "indexer_bench"
harness = false

[patch.crates-io]
hf-hub = { path = "vendor/hf-hub" }
